bgo#749415: Don't duplicate logic for deciding when to push discrete layers

rsvg_cairo_render_path() tried to avoid calling
rsvg_cairo_push/pop_discrete_layer(), but the logic to decide whether
to actually create an intermediate surface is best left in those
functions.  With the duplicate/incorrect logic, text had incorrect
spacing as a result.

Also, remove an extra-old comment from when those functions were first
implemented.

https://bugzilla.gnome.org/show_bug.cgi?id=749415